--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,6 +5,7 @@
    "source": [
     "Goal:\n",
     "\n",
+    "Show how genre, runtime, vote_average & budget influence revenue\n",
     "Show how genre, runtime, vote_average & budget influence revenue"
    ],
    "metadata": {
